--- a/react-multi-template-master/package.json
+++ b/react-multi-template-master/package.json
@@ -31,6 +31,7 @@
     "ethers": "^5.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "glob": "^7.2.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
