--- a/react-multi-template-master/package.json
+++ b/react-multi-template-master/package.json
@@ -38,6 +38,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "jquery": "^3.6.0",
     "kind-of": "6.0.3",
     "mini-css-extract-plugin": "0.8.0",
     "minimist": "1.2.3",
@@ -139,7 +140,5 @@
       "react-app"
     ]
   },
-  "devDependencies": {
-    "jQuery": "^1.7.4"
-  }
+  "devDependencies": {}
 }
