--- a/react-multi-template-master/package.json
+++ b/react-multi-template-master/package.json
@@ -15,8 +15,10 @@
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.5",
     "babel-preset-react-app": "^9.1.0",
+    "body-parser": "^1.19.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "cors": "^2.8.5",
     "css-loader": "3.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -28,7 +30,9 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "ethereum-blockies": "^0.1.1",
     "ethers": "^5.6.1",
+    "express": "^4.17.3",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.2.0",
@@ -42,6 +46,8 @@
     "kind-of": "6.0.3",
     "mini-css-extract-plugin": "0.8.0",
     "minimist": "1.2.3",
+    "mongoose": "^6.2.9",
+    "nodemon": "^2.0.15",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "^1.7.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -53,6 +59,7 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "10.0.0",
     "react-dom": "^16.12.0",
+    "react-meta-tags": "^1.0.1",
     "resolve": "1.12.2",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
@@ -139,6 +146,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {}
+  }
 }
