--- a/react-multi-template-master/package.json
+++ b/react-multi-template-master/package.json
@@ -22,6 +22,8 @@
     "css-loader": "3.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "echarts": "^5.3.2",
+    "echarts-for-react": "^3.0.2",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.1.0",
     "eslint-loader": "3.0.2",
@@ -60,6 +62,7 @@
     "react-dev-utils": "10.0.0",
     "react-dom": "^16.12.0",
     "react-meta-tags": "^1.0.1",
+    "react-minimal-pie-chart": "^8.2.0",
     "resolve": "1.12.2",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
