fix all problems on account.js"

--- a/react-multi-template-master/package.json
+++ b/react-multi-template-master/package.json
@@ -146,5 +146,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.26.1",
+    "react-bootstrap": "^2.2.3"
   }
 }
